# uhd-hs

./: .gitignore  LICENSE  README.md  shell.nix  uhd.cabal
example/: Main.hs
rx_samples_hs/: Main.hs
src/Network/: UHD.hs
src/Network/UHD/: Internal.hsc
