cabal-version:       2.2

name:                uhd
version:             0.1.0.0
synopsis:            Interface with Ettus USRP SDRs
description:         Interface with Ettus USRP SDRs
homepage:            https://github.com/TravisWhitaker/uhd-hs
bug-reports:         https://github.com/TravisWhitaker/uhd-hs/issues
license:             MIT
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          pi.boy.travis@gmail.com
copyright:           Travis Whitaker 2026
category:            Network
-- extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Network.UHD
                     , Network.UHD.Internal
  build-depends:       base
                     , time
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010
  extra-libraries:     uhd
  ghc-options:         -O2
                       -Wall
                       -Widentities
                       -Wredundant-constraints
                       -Wcompat
                       -Wno-type-defaults
                       -Wno-unused-local-binds
                       -Wno-unused-do-bind
                       -Wno-unused-matches
                       -Werror

executable example
  main-is: Main.hs
  hs-source-dirs: example
  build-depends: base
               , time
               , vector
               , uhd
  default-language: Haskell2010
  ghc-options:         -O2
                       -threaded
                       -rtsopts
                       -Wall
                       -Widentities
                       -Wredundant-constraints
                       -Wcompat
                       -Wno-type-defaults
                       -Wno-unused-local-binds
                       -Wno-unused-do-bind
                       -Wno-unused-matches
                       -Werror

executable rx_samples_hs
  main-is: Main.hs
  hs-source-dirs: rx_samples_hs
  build-depends: base
               , optparse-applicative
               , time
               , vector
               , uhd
  default-language: Haskell2010
  ghc-options:         -O2
                       -threaded
                       -rtsopts
                       -Wall
                       -Widentities
                       -Wredundant-constraints
                       -Wcompat
                       -Wno-type-defaults
                       -Wno-unused-local-binds
                       -Wno-unused-do-bind
                       -Wno-unused-matches
                       -Werror

